<resources>
    <string name="app_name">LunchBox2</string>

    <string-array name="user_types">
        <item> Login As </item>
        <item> Customer </item>
        <item> Tiffin Provider </item>
    </string-array>

    <string name="my_lunch_box">The Lunch Box</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="address"> * Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_1">Mobile Number 1</string>
    <string name="mobile_number_2">Mobile Number 2</string>
    <string name="mobile2"> 2</string>
    <string name="email_id">* Email - Id</string>
    <string name="user_example_com">user@example.com</string>
    <string name="save_and_continue">Save And Continue</string>
    <string name="user_name">* User Name</string>
    <string name="mandatory_password">* Password</string>
    <string name="confirm_password">* Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="the_lunch_box">The Lunch Box</string>
    <string name="title_activity_tiffin_provider_reistration1">Sign in</string>
    <string name="name_of_tiffin_service">* Name of Tiffin Service</string>
    <string name="owner_s_name"> * Owner\'s Name</string>
    <string name="customer">Customer</string>
    <string name="tiffin_provider">Tiffin Provider</string>
    <string name="regsitration">Registration</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_customer_home">CustomerHomeActivity</string>
    <string name="title_activity_provider_home">ProviderHomeActivity</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non-Veg</string>
    <string name="both">Both</string>

</resources>
