<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.dell.lunchbox2.TiffinProviderRegistration2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tiffpusernm"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Provides : "
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/tiffpcategorygrp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veg"
                android:id="@+id/tiffpveg"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_veg"
                android:id="@+id/tiffpnonveg"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both"
                android:id="@+id/tiffpboth"/>

        </RadioGroup>

        <TextView
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/background_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/mandatory_password"/>
        <EditText
            android:inputType="textPassword"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:id="@+id/tiffppassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:textColor="@android:color/background_dark"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"/>
        <EditText
            android:inputType="textPassword"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:id="@+id/tiffpconfirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tiffp_reg2_button"
            android:textAllCaps="false"
            android:text="@string/submit"
            android:layout_gravity="center"/>


    </LinearLayout>
</ScrollView>
